added text input for initials on quis complete screen.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </div>
 
-        <div class="quiz__complete__container hide">
+        <div class="quiz__complete__container ">
             <h2 class="quiz__complete__text">
                 quiz complete
             </h2>
@@ -61,6 +61,9 @@
             </h3>
 
             <p class="quiz__time"></p>
+
+            <label class="initials__label" for="initials">type initials to save your score</label>
+            <input class="initials" type="text" id="initials" name="initials">
 
             <button id="quiz-restart-btn" class="restart__btn">RESTART</button>
         </div>
