created and linked script.js added event listener to start button and console logged that when clicked, it starts my quizStart function.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/trj0jfc.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <script defer src="./assets/js/script.js"></script>
     <title>Coding Quiz</title>
 </head>
 <body>
@@ -24,7 +25,7 @@
     </header>
 
     <main id="quiz-card">
-        <div class="title__container hide">
+        <div class="title__container ">
             <h1 class="quiz__title">
                 JavaScript
             </h1>
@@ -49,7 +50,7 @@
             </div>
         </div>
 
-        <div class="quiz__complete__container ">
+        <div class="quiz__complete__container hide">
             <h2 class="quiz__complete__text">
                 quiz complete
             </h2>
