added function to check if the selected answer has dataset.correct. added functions to add class of correct or wrong to selected answer to signify to the user if they got it correct or not.

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             </div>
 
             <div id="answer-btn-container" class="answerButtons__container">
-                <!-- <button id="answer-btn" class="btn"></button>
                 <button id="answer-btn" class="btn"></button>
                 <button id="answer-btn" class="btn"></button>
-                <button id="answer-btn" class="btn"></button> -->
+                <button id="answer-btn" class="btn"></button>
+                <button id="answer-btn" class="btn"></button>
             </div>
         </div>
 
