added an if else statement to the selectAnswer function to check if there are any remaining questions. If not it will now wait 1500ms and then display the quiz complete screen.

--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
                 <button id="answer-btn" class="btn"></button>
                 <button id="answer-btn" class="btn"></button>
             </div>
+
+            <button id="quiz-next-btn" class="next__btn hide">NEXT</button>
         </div>
 
-        <div class="quiz__complete__container hide">
+        <div id="quiz-complete-container" class="quiz__complete__container hide">
             <h2 class="quiz__complete__text">
                 quiz complete
             </h2>
