added and styled the timer. Still need to implement timer reduction on incorrect answer.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="goBack__text hide">&#60&#60 to quiz</div>
         <div class="highScore__bar hide"></div>
 
-        <div class="timer__container hide">
+        <div id="timer-container" class="timer__container hide">
             <div id="timer" class="timer"></div>
         </div>
     </header>
