added a function to disable answer buttons after one is clicked.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.typekit.net/trj0jfc.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <script defer src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <script defer src="./assets/js/script.js"></script>
     <title>Coding Quiz</title>
 </head>
@@ -59,13 +60,11 @@
                 quiz complete
             </h2>
 
-            <p id="quiz-score" class="quiz__score"></p>
-
-            <h3 class="quiz__time__header">
-                time:
+            <h3 class="quiz__score__header">
+                final score:
             </h3>
 
-            <p id="quiz-time" class="quiz__time"></p>
+            <p id="quiz-score" class="quiz__score"></p>
 
             <label class="initials__label" for="initials">type initials to save your score</label>
             <input class="initials" type="text" id="initials" name="initials">
