added userInitials/score save to local storage.

--- a/index.html
+++ b/index.html
@@ -89,13 +89,8 @@
                 High Scores
             </h2>
 
-            <ul id="highScores-list" class="highScore__scores__list">
-                <li id="highScore-top" class="highScore__score"></li>
-                <li id="highScore-2" class="highScore__score"></li>
-                <li id="highScore-3" class="highScore__score"></li>
-                <li id="highScore-4" class="highScore__score"></li>
-                <li id="highScore-5" class="highScore__score"></li>
-            </ul>
+            <div id="highScores-list" class="highScore__scores__list">
+            </div>
         </div>
     </main>
     <script defer src="./assets/js/script.js"></script>
