added minor fixes to highscore menu functionality.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <p id="quiz-score" class="quiz__score"></p>
 
-            <label class="initials__label" for="initials">type initials to save your score</label>
+            <label id="initials-label" class="initials__label" for="initials">type initials to save your score</label>
             <input class="initials" type="text" id="initials" name="initials">
 
             <div id="quiz-controlBtn-container" class="quiz__controlBtn__container">
