added close menu when clicking outside of highScore text.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="html" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -41,11 +41,11 @@
 
     <main id="quiz-card">
         <div id="title-container" class="title__container ">
-            <h1 class="quiz__title">
+            <h1 id="quiz-title" class="quiz__title">
                 JavaScript
             </h1>
 
-            <h2 class="thin">
+            <h2 id="quiz-subtitle" class="thin">
                 coding quiz
             </h2>
 
